contact informtion mobile fix

--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ i {
     }
     .contact_information{
         position:relative;
-        top:-1210px;
+        top:-1491px;
         right:-400px;
         width:200px;
         float:right;
